# super-point-algorithm-ros2

./: RosViewer.jsx  RosViewer_npm.jsx  index.html  package.json  package_simple.json  ros_pointcloud_viewer_complete.jsx  tracked3.py
src/arg_cam/: CMakeLists.txt  package.xml
src/arg_cam/launch/: dual_camera_on_argus.launch.py
src/vertex_detector/: CMakeLists.txt  package.xml
src/vertex_detector/config/: detector_params.yaml
src/vertex_detector/include/vertex_detector/: image_processor.hpp  nms_filter.hpp  vertex.hpp  vertex_detector_node.hpp
src/vertex_detector/launch/: detector.launch.py
src/vertex_detector/models/: superpoint_320.onnx
src/vertex_detector/scripts/: stereo_viewer.py  stereo_viewer2.py
src/vertex_detector/src/: image_processor.cpp  nms_filter.cpp  vertex_detector_node.cpp
