<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vertex_detector</name>
  <version>1.0.0</version>
  <description>CNN-based vertex detection using TensorRT on Jetson Orin</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- OpenCV -->
  <depend>libopencv-dev</depend>
  
  <!-- CUDA & TensorRT (Jetson Orin) -->
  <!-- Te są już zainstalowane na Jetson, ale dobrze je zaznaczyć -->
  <exec_depend>cuda-cudart</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components plugin="${prefix}/vertex_detector_component"/>
  </export>
</package>